--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StepSolve</title>
     <meta name="theme-color" content="#121212">
-  <link rel="icon" type="image/x-icon" href="/1.ico">
+  <link rel="icon" type="image/svg+xml" href="/1.svg">
+<link rel="alternate icon" type="image/x-icon" href="/1.ico">
   <link rel="manifest" href="/public/manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
